get all accounts and get account by userId done